fixed home page gap, also added a header to the contact page

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 	color: white;
 	text-align: center;
 	margin-bottom: 0px;
+	margin-top: 14px;
 	padding-bottom: 30px;
 }
 
@@ -14,6 +15,7 @@
 .footer {
 	background-color: #26173a;
 	height: 60px;
+	width: 1300px;
 	bottom: 0px;
 	text-align: center;
 	color: white;
@@ -123,5 +125,11 @@ body {
 }
 
 a {
+	color: white;
+	border-right: 1px;
+}
+
+a:hover {
+	text-decoration: none;
 	color: white;
 }
